[package]
name = "odp_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
polars = { version = "0.41.3", features = ["lazy"] }
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = "1.38.1"
